Refactor javac options to improve consistency and handle null/empty parameters